# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  arkkitehtuurikuvaus.md  changelog.md  tuntikirjanpito.md  tyokirjanpito.md  vaatimusmaarittely.md  vaatismusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py  maksukortti_test.py.save.1
laskarit/viikko2/unicafe/: ..g.swp  .coverage  pyproject.toml  tasks.py
laskarit/viikko2/unicafe/htmlcov/: index.html  src_kassapaate_py.html  src_maksukortti_py.html  status.json
laskarit/viikko2/unicafe/src/tests/: .coverage  kassapaate_test.py  maksukortti_test.py
poetry-testi/: pyproject.toml
poetry-testi/src/: index.py
pychat/: pyproject.toml
pychat/dokumentaatio/: changelog.md  tyokirjanpito.md  vaatimusmaarittely.md
pychat/src/: chat_message.py  loginscreen.py  main.py  pyproject.toml  ui.py  user.py
pychat/src/tests/: chat_message_test.py
src/: chat_message.py  chess_drawgrid.py  chessgame.py  fill_board.py  load_images.py  main.py  move_piece.py  piece.py  tasks.py  user.py
src/data/: accounts.json  msghistory.json
src/entities/: chat_message.py  user.py
src/services/: chat_services.py  dataparser.py
src/tests/: chat_message_test.py  chat_services_test.py  chessgame_test.py  move_piece_test.py  piece_test.py  user_test.py
src/ui/: chatscreen.py  loginscreen.py  ui.py
(+98 files in other folders)
