[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Markus Tervonen <markus.tervonen@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
invoke = "^1.7.3"
pylint = "^2.15.6"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
